--- a/src/Components/Home/All.css
+++ b/src/Components/Home/All.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Roboto", sans-serif;
+}
+
 .category {
   box-sizing: border-box;
   margin: 0;
@@ -12,7 +16,6 @@
 
 .sub-categories p {
   padding: 5px 25px;
-  /* border: 1px solid black; */
   border-radius: 40%;
   margin-right: 5px;
 }
