--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -1,3 +1,8 @@
+.DivNav{
+	position: relative;
+	z-index: 1;
+}
+
 .Ul {
 	z-index: 1;
 	margin: 0;
@@ -10,19 +15,6 @@
 	width: 100%;
 }
 
-.Pages{
-	width: 25%;
-	float: left;
-	text-align: left;
-	margin-left: 7%;
-	font-size: 20px;
-}
-
-.Data{
-	text-align: center;
-	width: 50;
-	margin: 0 auto;
-}
 
 .Li {
 	text-align: center;
@@ -53,50 +45,19 @@
 	color: #40a4c8;
 	} 	
 
-.YourName{
-	position:absolute;
-	top: 150px;
-	left: 100px;
-	width: 400px;
-	height: 600px;
+.Pages{
+	width: 25%;
+	float: left;
+	text-align: left;
+	margin-left: 7%;
+	font-size: 20px;
 }
 
-.Logo{
-	width: 50%;
-	position: absolute;
-	top: 250px;
-	right: 100px;
-	z-index: 3;
-	-webkit-animation: roll-in-top 1.5s ease-out both;
-	        animation: roll-in-top 1.5s ease-out both;
+.Data{
+	text-align: center;
+	width: 50;
+	margin: 0 auto;
 }
-
-
-@-webkit-keyframes roll-in-top {
-  0% {
-    -webkit-transform: translateY(-800px) rotate(-540deg);
-            transform: translateY(-800px) rotate(-540deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateY(0) rotate(0deg);
-            transform: translateY(0) rotate(0deg);
-    opacity: 1;
-  }
-}
-@keyframes roll-in-top {
-  0% {
-    -webkit-transform: translateY(-800px) rotate(-540deg);
-            transform: translateY(-800px) rotate(-540deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: translateY(0) rotate(0deg);
-            transform: translateY(0) rotate(0deg);
-    opacity: 1;
-  }
-}
-
 
 .Container {
 
@@ -105,6 +66,8 @@
 	width: 100%;
 	height: 1000px;
 	background-color: black;
+	display: flex;
+	flex-direction: column;
 	position: relative;
 	-webkit-transition: background-image 0.2s ease-in-out;
 transition: background-image 0.2s ease-in-out;
@@ -173,14 +136,22 @@ transition: background-image 0.2s ease-in-out;
 
 
 .ContainerSearch {
+	margin-top: 600px;
 	position: relative;
-	margin-top: 300px;
-	margin-left: 200px;
-	width: 50%;
-	float: middle;
+	width: 100%;
 	z-index: 1;
 	-webkit-animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	animation: focus-in-contract-bck 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+.Form{
+	
+	position: absolute;
+	text-align: center;
+	width: 99%;
+	top:150px;
+	left: 50%;
+	margin-left: -255px;
 }
 
 .Particles{
@@ -190,16 +161,18 @@ transition: background-image 0.2s ease-in-out;
 }
 
 .Title{
-	text-align: left;
+	text-align: center;
 	font-size: 40px;
 	font-weight: 700;
 	color: white;
 }
 
 .Para{
-	text-align: left;
+	text-align: center;
 	font-size: 20px;
 	color: white;
+	line-height: 200%;
+	
 }
 
 .Options{
