--- a/src/Components/Home/Login.module.css
+++ b/src/Components/Home/Login.module.css
@@ -2,13 +2,13 @@
 	max-height: calc(100vh - 110px);
 	overflow-y: auto;
 	position: relative;
-	z-index: 0;
+	z-index: 3;
 }
 
 .Container{
 	position: relative;
 	z-index: 1;
-	background: white;
+	background: #f7f7f7;
 	width: 900px;
 	height: 900px;
 	margin: 100px auto;
@@ -36,7 +36,7 @@
 .ContainerLogin{
 	position: relative;
 	z-index: 1;
-	background: white;
+	background: #f7f7f7;
 	width: 900px;
 	height: 700px;
 	margin: 100px auto;
