--- a/src/Components/Home/HomeNav.css
+++ b/src/Components/Home/HomeNav.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   font-family: "Roboto", sans-serif;
 }
 
@@ -40,3 +40,4 @@ nav input {
 	flex-direction: row;
 	justify-content: space-between;
 }
+ */
