--- a/src/Components/Home/Logo.css
+++ b/src/Components/Home/Logo.css
@@ -30,37 +30,6 @@
 	transform:translate(-50%, -50%);
 }
 
-svg {
+.svg {
   margin: 15vmin;
-}
-
-/* ---------- UI Controls ---------- */
-
-.themesContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.theme {
-  width: var(--UIControlsSize);
-  height: var(--UIControlsSize);
-  margin: 20px;
-  border-radius: 50%;
-  border: 3px solid white;
-  background: lightgray;
-  transition: transform 0.2s;
-  cursor: pointer;
-  overflow: hidden;
-}
-
-.theme:hover {
-  transform: scale(1.1);
-}
-
-.bg-colour {
-  height: 100%;
-  width: 50%;
-  transform-origin: 100% 50%;
-  transform: rotate(225deg);
 }
