--- a/src/Components/Home/All.css
+++ b/src/Components/Home/All.css
@@ -31,33 +31,59 @@
 
 /* MOVIE LIST */
 
-.body {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+.card-col {
+  /* border: 1px solid black; */
+  text-align: center;
 }
 
-.card {
+.card-col img {
+  position: relative;
+  left: 20px;
+  height: 300px;
+  border-radius: 5px;
+  box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25),
+    0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
+}
+
+.card-col h3 {
+  text-transform: capitalize;
+}
+
+.slick-arrows {
+  background-color: cornflowerblue;
+}
+
+/* .body {
+  display: flex;
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+} */
+
+/* .App {
+  display: flex;
+} */
+
+/* .card {
   transition: transform 0.5s;
   margin: 10px;
   border-radius: 10px;
   color: #000000;
   text-decoration: none;
-}
+} */
 
-.card .info {
+/* .card .info {
   position: relative;
   top: -20px;
-}
+} */
 
-.card .info h1 {
+/* .card .info h1 {
   margin-bottom: -15px;
-}
+} */
 
-.card img {
+/* .card img {
   border-radius: 10px;
   width: 100%;
-}
+} */
 
-.card:hover {
+/* .card:hover {
   transform: translateY(-10px);
-}
+} */
