--- a/src/Components/Home/Login.module.css
+++ b/src/Components/Home/Login.module.css
@@ -69,7 +69,7 @@
 	align-items: center;
 	flex-direction: column;
 }
-.Form h3{
+.Form h3, .Form label{
 	width: 700px;
 	text-align: left;
 	color: black;
@@ -89,6 +89,14 @@
 }
 
 .Submit{
+	width: 700px;
+	height: 60px;
+	box-sizing: border-box;
+	border: 1px solid #333333;
+	padding: 21px 31px 20px 31px;
+	margin-bottom: 10px;
+	border-radius: 6px;
+	box-sizing: border-box;
 	margin-top: 50px;
 	background-color: #0275d8;
 	color: white;
@@ -98,4 +106,14 @@
 .Submit:hover{
 	background-color: white;
 	color: #0275d8 ;
+}
+
+.FormControl{
+	margin-bottom: 20px;
+	display:flex;
+	flex-direction: column;
+}
+
+.Error{
+	color: red;
 }
