--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,56 +1,56 @@
-* {
-  font-family: "Roboto", sans-serif;
-}
-
 footer {
+  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 30px;
-
+  padding: 20px 10px;
   color: #ffffff;
   background-color: #000000;
+  /* border: 3px solid #ffffff; */
 }
 
-footer .row {
+.coltwo {
+  display: flex;
+  /* justify-content: space-evenly; */
+  /* align-items: center; */
+}
+
+.coltwo p {
+  margin: 5px 10px;
+}
+
+/* footer .row {
   display: flex;
   border-bottom: 3px solid #d4d4d4;
-}
+} */
 
-.col-one {
-  /* border: 1px solid #ffffff; */
-  /* padding: 0 20px; */
-}
+/* .colone {
+  border: 1px solid #ffffff;
+  padding: 0 20px;
+} */
 
-.col-one .name {
+/* .colone .name {
   display: flex;
   justify-content: left;
   align-items: center;
-}
+} */
 
-.name img {
+/* .name img {
   height: auto;
   max-width: 60px;
-}
+} */
 
-.col-two {
-  /* border: 1px solid #ffffff; */
-  margin: 0 50px;
-  padding: 0 50px;
-  font-weight: lighter;
-}
-
-.col-two p {
+/* .coltwo p {
   font-size: large;
-}
+} */
 
-.col-three {
-  /* padding: 0 20px; */
-  /* border: 1px solid #ffffff; */
-}
+/* .colthree {
+  padding: 0 20px;
+  border: 1px solid #ffffff;
+} */
 
-.col-three .store img {
+/* .colthree .store img {
   height: auto;
   max-width: 150px;
   display: flex;
@@ -58,27 +58,27 @@ footer .row {
   align-items: center;
   position: relative;
   left: -10px;
-}
+} */
 
-.col-three .store {
+/* .colthree .store {
   display: flex;
   justify-content: left;
   align-items: center;
-}
+} */
 
-.col-three .media img {
+/* .colthree .media img {
   height: auto;
   max-width: 40px;
   margin-right: 10px;
-}
+} */
 
-.col-three .media .face {
+/* .colthree .media .face {
   height: auto;
   max-width: 35px;
-}
+} */
 
-.col-three .media {
+/* .colthree .media {
   display: flex;
   justify-content: left;
   align-items: center;
-}
+} */
