--- a/src/Components/Home/All.module.css
+++ b/src/Components/Home/All.module.css
@@ -6,8 +6,9 @@
 }
 
 .subcategories p {
+  background-color: rgba(219, 0, 0, 0.7);
+  border-radius: 10px;
   padding: 5px 25px;
-  border-radius: 50px;
   margin-right: 5px;
   color: white;
   text-decoration: none;
