--- a/src/Components/Home/Login.module.css
+++ b/src/Components/Home/Login.module.css
@@ -1,5 +1,5 @@
 .Modal{
-	max-height: calc(100vh - 110px);
+	max-height: calc(100vh - 50px);
 	overflow-y: auto;
 	position: relative;
 	z-index: 3;
@@ -9,9 +9,9 @@
 	position: relative;
 	z-index: 1;
 	background: #f7f7f7;
-	width: 1100px;
-	height: 900px;
-	margin: 100px auto;
+	width: 500px;
+	height: 870px;
+	margin: 50px auto;
 	border-radius: 8px;
 	display:flex;
 	justify-content: center;
@@ -26,6 +26,10 @@
 	color: black;
 }
 
+.Container img{
+	margin-bottom: 50px;
+}
+
 .Container h1{
 	position: absolute;
 	top:-10px;
@@ -37,9 +41,9 @@
 	position: relative;
 	z-index: 1;
 	background: #f7f7f7;
-	width: 900px;
-	height: 700px;
-	margin: 100px auto;
+	width: 500px;
+	height: 800px;
+	margin: 50px auto;
 	border-radius: 8px;
 	display:flex;
 	justify-content: center;
@@ -53,6 +57,10 @@
 	top:-10px;
 	right: 20px;
 	cursor: pointer;
+}
+
+.ContainerLogin img{
+	margin-bottom: 50px;
 }
 
 .ContainerLogin h2{
@@ -70,7 +78,7 @@
 	flex-direction: column;
 }
 .Form h3, .Form label{
-	width: 700px;
+	width: 400px;
 	text-align: left;
 	color: black;
 }
@@ -79,33 +87,39 @@
 	color: black;
 }
 .Form input{
-	width: 700px;
+	width: 400px;
 	height: 60px;
 	box-sizing: border-box;
 	border: 1px solid #333333;
-	padding: 21px 31px 20px 31px;
+	padding: 0 10px;
 	margin-bottom: 10px;
-	border-radius: 6px;
+	background: #f7f7f7;
+	border: 0 solid black;
+	border-bottom: 2px solid #adadad;
 }
 
 .Submit{
-	width: 700px;
-	height: 60px;
-	box-sizing: border-box;
-	border: 1px solid #333333;
-	padding: 21px 31px 20px 31px;
-	margin-bottom: 10px;
-	border-radius: 6px;
-	box-sizing: border-box;
-	margin-top: 50px;
-	background-color: #0275d8;
+	margin: 20px 0;
+	text-transform: uppercase;
+	text-decoration: none;
 	color: white;
-	margin-bottom: 100px;
+	background: #ed3330;
+	width: 350px;
+	padding: 20px 0;
+	border-radius: 5px;
+	display: inline-block;
+	border: none;
+	transition: all 0.4s ease 0s;
 }
 
 .Submit:hover{
-	background-color: white;
-	color: #0275d8 ;
+	background: #434343;
+	width: 400px;
+	letter-spacing: 1px;	
+	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+	transition: all 0.4s ease 0s;
 }
 
 .FormControl{
