--- a/src/Components/Home/SearchPage.module.css
+++ b/src/Components/Home/SearchPage.module.css
@@ -39,6 +39,17 @@
   transform: translateY(-10px);
 }
 
+.noimage {
+  width: 209px;
+  height: 313px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.041);
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /* .subcategories {
   display: flex;
   justify-content: left;
