--- a/src/Components/User/User.module.css
+++ b/src/Components/User/User.module.css
@@ -155,6 +155,7 @@
 .SubmitCancel:hover{
 	width: 200px;
 	letter-spacing: 1px;	
+	background: #ed3330;
 	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
 	box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
