--- a/src/Components/User/User.module.css
+++ b/src/Components/User/User.module.css
@@ -40,7 +40,8 @@
 	border-radius: 75%;
 	margin: 90px 0 20px 0;
 	position: relative;
-	z-index:4;
+	z-index: 5;
+	background: white;
 	width: 190px;
 	height: 190px;
 }
