--- a/src/Components/Home/Category.module.css
+++ b/src/Components/Home/Category.module.css
@@ -51,13 +51,16 @@
 }
 
 .card .info {
-  position: relative;
-  top: -20px;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  /* position: relative;
+  top: -20px; */
 }
 
-.card .info h1 {
+/* .card .info h1 {
   margin-bottom: -15px;
-}
+} */
 
 .card img {
   border-radius: 10px;
@@ -68,6 +71,49 @@
   transform: translateY(-10px);
 }
 
-.paginate {
+.pagination {
+  justify-content: center;
+  margin-bottom: 100px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+ul.pagination li {
+  display: inline-block;
+  width: 50px;
+
+  display: flex;
+  height: 60px;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
+  font-size: 20px;
+}
+
+ul.pagination li a {
+  text-decoration: none;
+  color: #337ab7;
+  font-size: 20px;
+}
+
+ul.pagination li.active a {
+  color: white;
+}
+ul.pagination li.active {
+  background-color: #337ab7;
+}
+
+ul.pagination li a:hover,
+ul.pagination li a.active {
+  color: blue;
+}
+
+.page-selection {
+  width: 108px;
+  height: 100px;
+  color: #337ab7;
 }
