--- a/src/Components/DetailNew/Head/Description.module.css
+++ b/src/Components/DetailNew/Head/Description.module.css
@@ -3,6 +3,15 @@
 	width: 100%;
 }
 
+.Poster {
+	width: 390px;
+	height: 570px;
+	position: absolute;
+	top: 200px;
+	right: 100px;
+	z-index: 2;
+}
+
 .Slideshow{
 	list-style: none;
 	padding:0;
@@ -25,22 +34,22 @@
 }
 
 .Slideshow li:nth-child(1) { 
-  background-image: url('../../../Images/4.jpg'); 
+  background-image: url('../../../Images/back1.jpg'); 
 }
 .Slideshow li:nth-child(2) { 
-  background-image: url('../../../Images/tawa.jpg');
+  background-image: url('../../../Images/back6.jpg');
   animation-delay: 10s; 
 }
 .Slideshow li:nth-child(3) { 
-  background-image: url('../../../Images/3.jpg');
+  background-image: url('../../../Images/back3.jpg');
   animation-delay: 20s; 
 }
 .Slideshow li:nth-child(4) { 
-  background-image: url('../../../Images/2.jpg');
+  background-image: url('../../../Images/back4.jpg');
   animation-delay: 30s; 
 }
 .Slideshow li:nth-child(5) { 
-  background-image: url('../../../Images/1.jpg');
+  background-image: url('../../../Images/back5.jpg');
   animation-delay: 40s;
 }
 
@@ -71,9 +80,9 @@
 }
 
 .ContainerDesc p{
-	font-size: 25px;
+	font-size: 22px;
 	text-align: justify;
-	width: 40%;
+	width: 70%;
 	margin-bottom: 100px;
 	line-height: 150%;
 	letter-spacing: .10em;
@@ -93,6 +102,9 @@
 	font-weight: bold;
 }
 
+a{
+	text-decoration: none;
+}
 .button {
   --offset: 10px;
   --border-size: 2px;
