--- a/src/Components/User/User.module.css
+++ b/src/Components/User/User.module.css
@@ -163,6 +163,38 @@
 	transition: all 0.4s ease 0s;
 }
 
+.SubmitCan{
+	text-transform: uppercase;
+	text-decoration: none;
+	color: white;
+	background: #ed3330;
+	position: absolute;
+	bottom: 100px;
+	left:50%;
+	transform:translate(-50%, -50%);
+	width: 150px;
+	padding: 20px 0;
+	border-radius: 5px;
+	display: inline-block;
+	border: none;
+	transition: all 0.4s ease 0s;
+}
+
+.SubmitCan a {
+	text-decoration: none;
+	color: inherit;
+}
+
+.SubmitCan:hover{
+	width: 200px;
+	letter-spacing: 1px;	
+	background:  #434343;
+	-webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	-moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+	box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+	transition: all 0.4s ease 0s;
+}
+
 .SubmitEdit{
 	margin: 0 50px 0 0;
 	text-transform: uppercase;
