--- a/src/Components/Home/Category.module.css
+++ b/src/Components/Home/Category.module.css
@@ -55,6 +55,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+  margin-bottom: -10px;
 }
 
 .card .info .titlegenre {
@@ -74,9 +75,21 @@
   font-weight: bold;
 }
 
+.card .noimage {
+  width: 209px;
+  height: 313px;
+  border-radius: 10px;
+  background: #f5f5f5;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .card img {
   border-radius: 10px;
   width: 100%;
+  height: 313px;
 }
 
 .card:hover {
