--- a/src/Components/Home/SearchPage.module.css
+++ b/src/Components/Home/SearchPage.module.css
@@ -9,8 +9,7 @@
 
 .bodies {
   display: grid;
-  padding: 0 300px;
-  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
 }
 
 .card {
@@ -23,28 +22,44 @@
 }
 
 .card .info {
-  position: relative;
-  top: -20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
 }
 
-.card .info h1 {
-  margin-bottom: -15px;
+.card .info .titlegenre {
+  padding: 0 10px;
+}
+
+.card .info h6 {
+  font-style: italic;
+  font-size: 12px;
+  font-weight: lighter;
+}
+
+.card .info .genre {
+  background-color: rgba(255, 255, 255, 0.151);
+  padding: 10px;
+  border-radius: 100%;
+  font-weight: bold;
 }
 
 .card img {
   border-radius: 10px;
   width: 100%;
+  height: 313px;
 }
 
 .card:hover {
   transform: translateY(-10px);
 }
 
-.noimage {
+.card .noimage {
   width: 209px;
   height: 313px;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.041);
+  background: #f5f5f5;
   color: #000;
   display: flex;
   justify-content: center;
