--- a/src/Components/Home/Category.module.css
+++ b/src/Components/Home/Category.module.css
@@ -38,7 +38,7 @@
 
 .bodies {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(14rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
 }
 
 .card {
@@ -77,7 +77,7 @@
 
 .card .noimage {
   width: 209px;
-  height: 313px;
+  height: 450px;
   border-radius: 10px;
   background: #f5f5f5;
   color: #000;
@@ -89,7 +89,7 @@
 .card img {
   border-radius: 10px;
   width: 100%;
-  height: 313px;
+  height: 450px;
 }
 
 .card:hover {
@@ -121,7 +121,7 @@ ul.pagination li {
 
 ul.pagination li a {
   text-decoration: none;
-  color: #337ab7;
+  color: white;
   font-size: 20px;
 }
 
@@ -134,7 +134,11 @@ ul.pagination li.active {
 
 ul.pagination li a:hover,
 ul.pagination li a.active {
-  color: blue;
+  color: white;
+}
+
+ul.pagination li {
+  color: white;
 }
 
 .page-selection {
